added twitch support and fixed issues with Lavalink

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,21 @@ WEBHOOK_TOKEN=
 DISCORD_ID=
 
 # Not neccessary variables
-DISCORD_STATUS="Listening to meself, I'm a stupid bot, https://github.com/corwindev/discord-bot"
+DISCORD_STATUS="I am overwatching TenCreator's discord servers with immense care!"
 RADIO=
 TOPGG_TOKEN=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
-LAVALINK_HOST=lava.link
-LAVALINK_PASSWORD=I'm a secret
+LAVALINK_HOST=localhost
+LAVALINK_PASSWORD=pass
 LAVALINK_PORT=80
 LAVALINK_SECURE=false
 OPENAI=
+TWITCH={
+    CLIENT_ID=''
+    STREAMER=""
+    EMBED_CLR="#9147FF"
+    LIVE_MSG="<STREAMER> is now ✨streaming✨"
+    OFFLINE_MSG="<STREAMER> is currently offline!"
+    CHANNEL=
+}
