--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.2.2",
     "canvacord": "^5.4.8",
     "chalk": "^4.1.2",
+    "cron": "^2.3.1",
     "discord-giveaways": "^6.0.1",
     "discord-image-generation": "^1.4.23",
     "discord.js": "^14.8.0",
@@ -63,9 +64,10 @@
     "moment-timezone": "^0.5.39",
     "mongoose": "^6.8.0",
     "ms": "^2.1.3",
-    "node-fetch": "^2.6.6",
+    "node-fetch": "^2.6.12",
     "parse-ms": "^2.1.0",
     "popcat-wrapper": "^1.5.4",
+    "request": "^2.88.2",
     "sourcebin": "^5.0.0",
     "topgg-autoposter": "^2.0.1",
     "util": "^0.12.5",
